<resources>
    <string name="app_name">Tapt</string>
    <string name="current_tab">currentTab</string>
    <string name="title_activity_pre_login">PreLoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="signUpText">Don\'t have an account? Sign up!</string>
    <string name="title_activity_linute_login">Sign in</string>
    <string name="prompt_email">Edu Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">Invalid edu email</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_nonmatching_passwords">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_linute_sign_up">Sign in</string>
    <string name="bad_connection_text">Could not connect with server</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="signup_error_email_taken">This email is already in use</string>
    <string name="prelogin_linute_login">Linute Login</string>
    <string name="prelogin_facebook_login">Facebook Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_frag_friends">FRIENDS</string>
    <string name="profile_frag_hosted">HOSTED</string>
    <string name="profile_frag_attended">ATTENDED</string>
    <string name="error_communicating_server">Error communicating with server. Please try again.
    </string>
    <string name="title_activity_linute_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="bio_hint">Tell us about yourself</string>
    <string name="birthday_hint">Tell us your birthday</string>
    <string name="change_phone_phone_hint">Phone Number</string>
    <string name="change_phone_only_us">We currently only accept United States phone numbers. Please
        do not enter your number if you are located outside of the US. Thank you, and we will inform
        you when this has changed in future updates.
    </string>
    <string name="change_phone_confirm_hint">Confirmation Code</string>
    <string name="changephone_number_in_use">Number already being used.</string>
    <string name="change_phone_invalid_code">Incorrect code</string>
    <string name="data_saved">Saved</string>
    <string name="describe_event">Enter your status here…</string>
    <string name="block_user_android">
        You and the person you block will not be able to:\n
        \u2022 Follow each other\n
        \u2022 See each other on the campus feed\n
        \u2022 Mention each other in comments\n
    </string>
    <string name="unblock_user">
        You and the person you unblock will be able to:\n
        \u2022 Follow each other\n
        \u2022 See each other on the campus feed\n
        \u2022 Mention each other in comments\n
    </string>
    <string name="squarecamera__app_name">SquareCamera</string>
    <string name="squarecamera__action_settings">Settings</string>
    <string name="squarecamera__start_image_capture">Take New Picture!</string>
    <string name="squarecamera__capture_image">Snap It!</string>
    <string name="squarecamera__save_image">Save</string>
    <string name="squarecamera__cancel">Cancel</string>
    <string name="squarecamera__swap_camera">Swap</string>
    <string name="squarecamera__flash">Flash</string>
    <string name="squarecamera__auto_flash">Auto Flash</string>
    <string name="squarecamera__no_flash">No Flash</string>
    <string name="squarecamera__recapture_image">Retake Picture</string>
    <string name="squarecamera__capturing_image">Taking New Picture</string>
    <string name="squarecamera__done">Done</string>
    <string name="squarecamera__request_write_storage_permission_text">Approval is needed to save
        your photo on your device
    </string>
    <string name="title_activity_college_picker">CollegePickerActivity</string>
    <string name="facebook_app_id">900595913337243</string>
    <string name="title_activity_rooms">RoomsActivity</string>
    <string name="search_hint">Search</string>
    <string name="find_friends_facebook">Finds Facebook friends who are also using Tapt!</string>
    <string name="need_contant_permission">
        Find your Facebook friends on Tapt

    </string>
    <string name="facebook_rationale">Find your friends on Tapt

    </string>
    <string name="no_friends_posts">Your friends haven\'t posted anything yet.</string>
    <string name="no_campus_post">Your school hasn\'t posted anything yet</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Type a message…</string>
    <string name="error_connect">Failed to connect with server. Make sure you have internet!
    </string>
    <string name="user_action_typing">is typing</string>
    <string name="find_people_near_you">Tapt needs access to your location so we can find friends
        that are near you.
    </string>
    <string name="need_location">Tapt needs your location to find friends near you</string>
    <string name="no_comment">Start it off with a comment</string>
    <string name="no_results">No results found</string>
    <string name="discover_no_posts_campus">Looks like you’re a pioneer.\n
        See what other campuses are doing while you spread the word on yours!
    </string>
    <string name="discover_no_posts_hot">
        As your campus feed picks up you’ll see the best posts here!
    </string>
    <string name="profile_owner_no_posts">
        Create your first post. \n
        Make it anonymous, \n
        have fun with it!
    </string>
    <string name="profile_not_owner_no_posts">
        This person currently has\n
        no posts
    </string>
    <string name="updates_no_updates">Get updates here by interacting with your friends from class
        or a different college!

    </string>
</resources>